--- a/Life_In_Balance/inc/onboarding/assets/info-page.css
+++ b/Life_In_Balance/inc/onboarding/assets/info-page.css
@@ -32,26 +32,26 @@
 	max-width: 660px;
 	margin-bottom: 40px;
 }
-.sydney-tab {
+.life_in_balance-tab {
 	display: none;
 	padding: 30px 10px;
 }
-.sydney-tab.show {
+.life_in_balance-tab.show {
 	display: block;
 }
-.sydney-tab-nav .nav-button {
+.life_in_balance-tab-nav .nav-button {
 	font-size: 13px;
 	text-transform: uppercase;
 	letter-spacing: 1px;
 }
-.sydney-tab-nav .nav-tab {
+.life_in_balance-tab-nav .nav-tab {
 	padding: 10px 14px;
 }
-.sydney-tab-nav a:active,
-.sydney-tab-nav a:focus {
+.life_in_balance-tab-nav a:active,
+.life_in_balance-tab-nav a:focus {
 	box-shadow: none;
 }
-.sydney-tab-nav .nav-button.active {
+.life_in_balance-tab-nav .nav-button.active {
 	background-color: transparent;
 	border-bottom: 1px solid #fff;
 	margin-bottom: -1px;
@@ -68,35 +68,35 @@
 .tab-column:last-of-type {
 	float: right;
 }
-.sydney-tab.support .dashicons {
+.life_in_balance-tab.support .dashicons {
     display: block;
     font-size: 32px;
     height: auto;
     width: auto;
     text-align: left;
 }
-.sydney-tab.table table {
+.life_in_balance-tab.table table {
 	border-collapse: collapse;
 }
-.sydney-tab.table th,
-.sydney-tab.table td {
+.life_in_balance-tab.table th,
+.life_in_balance-tab.table td {
 	border: 1px solid #ebebeb;
 	padding: 20px;
 	text-align: center;
 }
-.sydney-tab .dash-green {
+.life_in_balance-tab .dash-green {
 	color: #5ad15a;
     font-size: 28px;
     height: auto;
     width: auto;
 }
-.sydney-tab .dash-red {
+.life_in_balance-tab .dash-red {
 	color: #fc6f6f;
     font-size: 28px;
     height: auto;
     width: auto;	
 }
-.sydney-theme-tabs {
+.life_in_balance-theme-tabs {
 	width: calc(70% - 30px);
 	float: left;
 	margin-right: 30px;
@@ -105,7 +105,7 @@
 	border: 1px solid #e5e5e5;
 	padding: 30px;
 }
-.sydney-theme-sidebar {
+.life_in_balance-theme-sidebar {
 	width: 30%;
 	float: left;
 	box-sizing: border-box;
@@ -113,10 +113,10 @@
 	border: 1px solid #e5e5e5;
 	padding: 30px;
 }
-.sydney-sidebar-widget {
+.life_in_balance-sidebar-widget {
 	margin-bottom: 30px;
 }
-.sydney-sidebar-widget:last-of-type {
+.life_in_balance-sidebar-widget:last-of-type {
 	margin-bottom: 0;
 }
 .plugins-row {
@@ -130,7 +130,7 @@
 	position: relative;
 	padding-bottom: 40px;
 }
-.sydney-notice {
+.life_in_balance-notice {
 	background-color: #fff2c3;
     padding: 10px;
     border-left: 2px solid #ffb100;
